[package]
name = "pbs-game"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1"}
pebbles-game-io.path="io"
rand = {version = "0.8" , default-features = false , features = ["small_rng"]}
rand_chacha = {version ="0.3" , default-features = false }

[build-dependencies]
gear-wasm-builder = {git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1"}
pebbles-game-io.path="io"

[dev-dependencies]
gtest = {git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1"}
pebbles-game-io.path="io"
bytecheck = " 0.7.0 "

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
region = "3.0"
